<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where I\'ve Been</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_pin">Add Pin</string>
    <string name="action_map">View Map</string>
    <string name="add">Add to Map</string>
    <string name="search">See where you\'ve been.</string>
    <string name="name">Where I\'ve Been</string>
    <string name="back">Back to Main Menu</string>
    <string name="design">Designed by: Shane Steward and Jacob Americano</string>
    <string name="about">About</string>
    <string name="created">Created for Info3097 Project</string>
    <string name="map">Map</string>
    <string name="add_loc">Add new locations.</string>
    <string name="text_or">Or</string>
    <string name="view">View Map</string>
    <string name="gps">Uncheck to not use your current location</string>
    <string name="selectPin">Select a pin type</string>
    <string name="giveName">Give it a name</string>
    <string name="detail">Give it some description</string>
    <string name="contact">Contact the creator at s_steward31675@fanshaweonline.ca  j_americano@fanshaweonline.ca</string>
    <string name="address">Enter an address below</string>
    <string name="hint">Text goes here</string>
    <string-array name="icon_types">
        <item >Home</item>
        <item >Work</item>
        <item >Vacation</item>
        <item >Friends</item>
    </string-array>

</resources>
